--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.expensum=DEBUG
 logging.level.org.springframework.data=DEBUG
+logging.level.org.springframework.web=DEBUG
+
 
 # Server Configuration
 server.port=8080
